# TensorRT-Custom-Plugin-Example

./: .clang-format  CMakeLists.txt  LICENSE  README.md
data/: .gitignore  identity_neural_network.onnx
docker/: tensorrt.Dockerfile
python/: README.md  common.py  common_runtime.py  main.py  test_engine.py  test_plugin.py
scripts/: create_identity_neural_network.py  export_identity_neural_network.py  export_identity_neural_network_new_opset.py  export_identity_neural_network_old_opset.py  export_identity_neural_network_onnx_function.py  modify_onnx_ac.py
src/: CMakeLists.txt  build_engine.cpp  run_engine.cpp
src/apps/: CMakeLists.txt  build_engine.cpp  run_engine.cpp
src/plugins/: CMakeLists.txt  IdentityConvPlugin.cpp  IdentityConvPlugin.h  IdentityConvPluginCreator.cpp  IdentityConvPluginCreator.h  PluginRegistration.cpp  PluginRegistration.h  PluginUtils.cpp  PluginUtils.h
src/plugins/IdentityConvIPluginV2IOExt/: CMakeLists.txt  IdentityConvPlugin.cpp  IdentityConvPluginCreator.cpp
src/plugins/IdentityConvIPluginV3/: CMakeLists.txt  IdentityConvPlugin.cpp  IdentityConvPlugin.h  IdentityConvPluginCreator.cpp  IdentityConvPluginCreator.h  PluginRegistration.cpp  PluginRegistration.h
src/plugins/PluginUtils/: PluginUtils.h
